RESOLVED FIXED170328
[WK2] Tapping away to dismiss the selection does not update the selected DOM range using character granularity
https://bugs.webkit.org/show_bug.cgi?id=170328
Summary [WK2] Tapping away to dismiss the selection does not update the selected DOM ...
Wenson Hsieh
Reported 2017-03-30 23:32:40 PDT
Attachments
Patch (7.01 KB, patch)
2017-03-31 13:46 PDT, Wenson Hsieh
thorton: review+
Patch for landing (7.25 KB, patch)
2017-03-31 14:53 PDT, Wenson Hsieh
no flags
Address post-review feedback (1.78 KB, patch)
2017-03-31 16:12 PDT, Wenson Hsieh
mitz: review+
Wenson Hsieh
Comment 1 2017-03-31 13:46:13 PDT
Wenson Hsieh
Comment 2 2017-03-31 14:53:33 PDT
Created attachment 306014 [details] Patch for landing
WebKit Commit Bot
Comment 3 2017-03-31 15:36:03 PDT
Comment on attachment 306014 [details] Patch for landing Clearing flags on attachment: 306014 Committed r214692: <http://trac.webkit.org/changeset/214692>
mitz
Comment 4 2017-03-31 15:50:03 PDT
Comment on attachment 306014 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=306014&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2982 > + if (_webView.configuration.selectionGranularity != WKSelectionGranularityCharacter) > + return; > + Why is this dependent on the selection granularity rather than the kind of selection assistant we are currently using. In other words, why does this bug (and fix) not apply to contenteditable elements in web views that don’t opt into character granularity?
Wenson Hsieh
Comment 5 2017-03-31 16:07:22 PDT
(In reply to mitz@webkit.org from comment #4) > Comment on attachment 306014 [details] > Patch for landing > > View in context: > https://bugs.webkit.org/attachment.cgi?id=306014&action=review > > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2982 > > + if (_webView.configuration.selectionGranularity != WKSelectionGranularityCharacter) > > + return; > > + > > Why is this dependent on the selection granularity rather than the kind of > selection assistant we are currently using. In other words, why does this > bug (and fix) not apply to contenteditable elements in web views that don’t > opt into character granularity? Good point. This handling should apply when using the text interaction assistant rather than when using selectionGranularity WKSelectionGranularityCharacter. I'll fix this in a followup patch.
Wenson Hsieh
Comment 6 2017-03-31 16:12:48 PDT
Created attachment 306024 [details] Address post-review feedback
Wenson Hsieh
Comment 7 2017-03-31 16:19:54 PDT
Note You need to log in before you can comment on or make changes to this bug.